--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "projeto-canil-nodets",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "24.x"
+  },
   "homepage": "https://github.com/luanadplr/projeto-canil-nodets#readme",
   "bugs": {
     "url": "https://github.com/luanadplr/projeto-canil-nodets/issues"
@@ -15,17 +18,22 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "tsc": "tsc",
+    "start": "node dist/app.js",
+    "postinstall": "npm run tsc && copyfiles -u 1 src/**/*.mustache dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon -e ts,json,mustache src/app.ts"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mustache-express": "^1.3.2"
+    "mustache-express": "^1.3.2",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/mustache-express": "^1.2.5",
-    "@types/node": "^24.3.0"
+    "@types/node": "^24.3.0",
+    "copyfiles": "^2.4.1"
   }
 }
